--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
-Hello World
+- From CSF curriculum guide 2019
+  - Philosophy
+    - Lead learner strategy. the role of the teacher shifts from being the source of knowledge to being a leader in seeking knowledge. “I may not know the answer, but I know that together we can figure it out.” (I know a few paths to seek out the answer). Teacher modeling and teaching how to learn.
+    - a concept is learnt by naturally extracting pattern from what you see. Students are given opportunities to explore concepts and build their own understandings through “play” and experimentation.
+    - ask students to be creative, to express themselves, and then to share their creations with others.
+    - Authentic choice strategy = allowing students to decide on the focus of their creation. They personally invest in the project, not something being asked to do.
+    - inclusive culture in which all students share ideas and listen to ideas of others. learning = social activity. Think-Pair-Share pattern; we ask students to write computer code in pairs.
+    - Pair programming strategy: driver + navigator, alternate roles. Start early, harder to switch once students are used to working alone.
+    - teaching is not the goal, creating things together is the goal!
+    - Journaling strategy. Like in real life. Draw emoticons identify how they’re feeling about concepts. reflecting on their growth for the day
+    - Prefer going deep into a concept rather than shallow introduction of multiple concentps. The main goal is to teach students that they are capable of learning computer science, don't leave students feeling as if they don’t understand any of it. (Hedgehog concept. Bruce Lee's practicing 1 kick a thousand times)
+
+  - Student practices (p22): set of practices and skills they develop throughout each course
+    - Problem Solving
+      - View challenges as solvable problems
+      - Use a structured problem solving-process to help solve new problems
+      - Break down larger problems into smaller components
+    - Persistence
+      - Value and expect mistakes as a natural and productive part of problem solving
+      - Iterate and continue to improve partial solutions
+      - Keep track of elements that worked and elements that did not to avoid repeating mistakes
+    - Creativity
+      - Start with incorporating your own interests or ideas into your work
+      - Experiment with new ideas and consider multiple possible approaches
+      - Extend or build upon the ideas and projects of others
+    - Communication
+      - Communicate problem and possible solutions.
+      - Consider the perspective and background of your audience when presenting your work
+      - Structure your work so that it can be easily understood by others
+      - Provide and accept constructive feedback in order to improve your work
+    - Debugging as a core skill! (p23)
+      - Without strong debugging skills, students can become frustrated
+      - Active Debugging: debugging while coding (individual)
+      - Reflective Debugging: participate in debugging as an entire class! Debugging other people code! A game hunting for bug! (Bug bounty)
+        - Bug talks (p24): given a problem, find issues and fixes individually or in small groups, then discuss and vote in the whole class. Apply the fixes to see if it solves the problem. Whole class feels achievement.
+        - Bug tracker: common problems the class encounter while coding and how to fix. Teacher = curator.
+
+  - Course desgin
+    - Course A-F = Kindergarten -> 5th grade (p1). 12-22h/course. 2 Express courses Pre-reader express (A+B) and Express (C+D+E+F).
+    - Each course has between 4 and 6 concept chunks. Chunk types:
+      - Course A: Digital Citizenship, Sequencing, Loops, Events
+      - Course B: + Impacts of Computing
+      - Course C: + Binary, Data
+      - Course D: + Conditionals, Sprites
+      - Course E: + Nested Loops, Functions, Variables
+      - Course F: + Internet
+    - Each chunk has several lessons. Lesson type = Skill Building, Application, and End of Course Project. More: p29-32
+    - Course A
+      - Teach: collaborate with others meaningfully, investigate different problem-solving techniques, persist in the face of difficult tasks, and learn about internet safety. By the end of this course, students create their very own custom game in Play Lab.
+    - Course B
+      - Teach: basics of programming, collaboration techniques, investigation and critical thinking skills, persistence in the face of difficulty, and internet safety. At the end of this course students will create their very own custom game in Play Lab.
+    - Course C
+      - translate their initials into binary, investigate problem-solving techniques, and develop strategies for building positive communities both online and off. By the end of the course, students will create interactive games that they can share
+      - debugging
+      - binary
+      - data
+      - end-of-course project
+    - Course D
+      - Angles and mathematical concepts
+      - Conditionals
+      - Build a Star Wars Game
+      - Code a dance party to share with your friends.
+    - Course E
+      - learn to identify when to apply and combine the many concepts they’ve learned
+      - provide the first puzzles where difficult concepts are mixed together, making it one of the most challenging courses in the series
+      - Teacher to be consistent with expectations from the very beginning (this is a difficult course), students be encouraged to work together to find solutions rather than relying on help from the teacher. Students should be empowered to try multiple techniques and should be given praise for persistence and for helping others.
+      - critical for students to understand the ideas behind each puzzles as it is for them to successfully solve the puzzle. Use journaling to help with difficult puzzles: what does it want me to do, what did I try, where did it go wrong, what should I try next?
+      - functions
+    - Course F
+      - understand how the concepts that they have learned impact the world around them and how they can be applied to solve interesting and personally relevant problems
+      - created interactive stories and games that they can share with their friends and family.
+      - given greater autonomy and creative freedom in programming
+      - solving a puzzle is not as important as understanding a puzzle
+      - data
+
+  - Key teaching tips
+    - Use the stories as a read-aloud and discuss the scenarios as a class
+    - Work through sample problems with students as a class
+    - Use pair programming and encourage students to help each other
+    - Remind students that they can go back and fix mistakes
+    - Celebrate persistence as well as successes
+    - Talk with students before you begin about how frustration will be present
+    - Ask student to explain problem, or a solution to another student?
+    - Require students to make a first attempt at problem solving before asking for help
+    - Encourage students to use a journal during and after activities <?>
+    - Promote an environment of cross-team collaboration for group activities and projects <?>
+
+  - Student attitudes toward goals
+    - It’s okay not to get it right the first time.
+    - I can solve problems if I keep trying
+    - I can read code and predict the outcome
+    - Programming can make repetitive tasks easy
+    - There are often many ways to solve a problem
+    - Reflecting on past problems helps me solve new ones
+    - Programming is creative
+    - I can use computer science to solve real and meaningful problems
+    - Struggle is good and a sign that I’m growing <?>
+
+  - Instruction to use the website
+    - Course overview structure p25 - p28
+    - Lesson plan guide p33
+    - Code studio p35
+
+  - Implementing class p38
+    - Lesson pacing
+    - Lesson time: 45' but can be shorten! (p38). Don't need to teach all lessons for a concept chunk, can group related lessons of a concept in 1 class. Always end with an experience in which students get to take ownership of something they make themselves, either in an application lesson or a project.
+    - Unplugged lesson in non-computer-lab, have a feeling of disconnection with machine.
+    - Implementation plan template for plugged lesson: p45
+    - Implementation plan template for unplugged lesson: p43
+    - Lesson implementation planning and template (Deep dive) p70-72
